force-app/main/default/objects/Product2/fields/SectionCode__c.field-meta.xml
<CustomField>
    <fullName>SectionCode__c</fullName>
    <description>CAS用項目</description>
    <label>部門コード</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAS_SupplierName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>