force-app/main/default/objects/Product2/fields/Seihingun__c.field-meta.xml
<CustomField>
    <fullName>Seihingun__c</fullName>
    <label>製品群</label>
    <length>255</length>
    <type>Text</type>
</CustomField>