force-app/main/default/objects/Product2/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>仕様</label>
    <length>100</length>
    <type>Text</type>
</CustomField>