force-app/main/default/objects/Product2/fields/SpecificatonDE__c.field-meta.xml
<CustomField>
    <fullName>SpecificatonDE__c</fullName>
    <label>Specification DE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>