force-app/main/default/objects/Product2/fields/SpecificatonENG__c.field-meta.xml
<CustomField>
    <fullName>SpecificatonENG__c</fullName>
    <label>Specification ENG</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>