force-app/main/default/objects/Product2/fields/SpecificatonFR__c.field-meta.xml
<CustomField>
    <fullName>SpecificatonFR__c</fullName>
    <label>Specification FR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>