force-app/main/default/objects/Product2/fields/Standard_Lead_Time_Svc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Standard_Lead_Time_Svc_Notes__c</fullName>
    <inlineHelpText>Additional notes to the standard lead time.</inlineHelpText>
    <label>Standard Lead Time Svc Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>