force-app/main/default/objects/Product2/fields/StandardLeadTimeSvcDays__c.field-meta.xml
<CustomField>
    <fullName>StandardLeadTimeSvcDays__c</fullName>
    <label>Standard Lead Time Svc (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>