force-app/main/default/objects/Product2/fields/StructureSortNo__c.field-meta.xml
<CustomField>
    <fullName>StructureSortNo__c</fullName>
    <label>構成順</label>
    <length>255</length>
    <type>Text</type>
</CustomField>