force-app/main/default/objects/Product2/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bruker Nano</fullName>
            </value>
            <value>
                <fullName>Cressington</fullName>
            </value>
            <value>
                <fullName>Deben</fullName>
            </value>
            <value>
                <fullName>Delmic</fullName>
            </value>
            <value>
                <fullName>Gatan</fullName>
            </value>
            <value>
                <fullName>Leica</fullName>
            </value>
            <value>
                <fullName>MicroToNano</fullName>
            </value>
            <value>
                <fullName>Oxford Nanoanalysis</fullName>
            </value>
            <value>
                <fullName>Quorum</fullName>
            </value>
            <value>
                <fullName>DigitalSurf</fullName>
            </value>
            <value>
                <fullName>MediaCybernetics</fullName>
            </value>
            <value>
                <fullName>EMSIS</fullName>
            </value>
            <value>
                <fullName>Spicer</fullName>
            </value>
            <value>
                <fullName>Applied Surface Technologies</fullName>
            </value>
            <value>
                <fullName>Kleindiek</fullName>
            </value>
            <value>
                <fullName>HTC</fullName>
            </value>
            <value>
                <fullName>XEI</fullName>
            </value>
            <value>
                <fullName>Applied Thermal Control</fullName>
            </value>
            <value>
                <fullName>HHT</fullName>
            </value>
            <value>
                <fullName>Spicer Consulting</fullName>
                <isActive>false</isActive>
                <label>Spicer Consulting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>