force-app/main/default/objects/Product2/fields/SupplierCode__c.field-meta.xml
<CustomField>
    <fullName>SupplierCode__c</fullName>
    <description>CAS用項目</description>
    <label>仕入先コード</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAS_SupplierName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>015</fullName>
                <default>true</default>
                <label>015</label>
            </value>
            <value>
                <fullName>260</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>605</fullName>
            </value>
            <value>
                <fullName>610</fullName>
            </value>
            <value>
                <fullName>620</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>