force-app/main/default/objects/Product2/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <label>仕入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>