force-app/main/default/objects/Product2/fields/SupplierSort__c.field-meta.xml
<CustomField>
    <fullName>SupplierSort__c</fullName>
    <description>CAS用項目</description>
    <label>仕入先ソート順位</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAS_SupplierName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>74</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>