force-app/main/default/objects/Product2/fields/SyohinMasterNo__c.field-meta.xml
<CustomField>
    <fullName>SyohinMasterNo__c</fullName>
    <description>CAS用項目</description>
    <externalId>true</externalId>
    <label>商品マスタ番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>