force-app/main/default/objects/Product2/fields/TariffNo__c.field-meta.xml
<CustomField>
    <fullName>TariffNo__c</fullName>
    <inlineHelpText>From SAP</inlineHelpText>
    <label>Tariff No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>