force-app/main/default/objects/Product2/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <inlineHelpText>トータルコスト</inlineHelpText>
    <label>TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>