force-app/main/default/objects/Product2/fields/zSearchTerm__c.field-meta.xml
<CustomField>
    <fullName>zSearchTerm__c</fullName>
    <formula>Name + &quot;|&quot; + ProductCode + &quot;|&quot; + PartNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to find Products in flows.</inlineHelpText>
    <label>zSearchTerm</label>
    <type>Text</type>
</CustomField>