force-app/main/default/objects/Product2/recordTypes/HFS.recordType-meta.xml
<RecordType>
    <fullName>HFS</fullName>
    <active>true</active>
    <label>HFS</label>
</RecordType>