force-app/main/default/objects/Product2/recordTypes/HHS.recordType-meta.xml
<RecordType>
    <fullName>HHS</fullName>
    <active>true</active>
    <label>HHS</label>
</RecordType>