force-app/main/default/objects/Product2/recordTypes/IoT.recordType-meta.xml
<RecordType>
    <fullName>IoT</fullName>
    <active>true</active>
    <description>IoT向け入力用</description>
    <label>IoT</label>
</RecordType>