force-app/main/default/objects/Product2/recordTypes/SAWO_DX_Product2.recordType-meta.xml
<RecordType>
    <fullName>SAWO_DX_Product2</fullName>
    <active>true</active>
    <label>DX</label>
</RecordType>