force-app/main/default/objects/Product2/recordTypes/Science.recordType-meta.xml
<RecordType>
    <fullName>Science</fullName>
    <active>true</active>
    <label>科学</label>
</RecordType>