force-app/main/default/objects/Product2/recordTypes/SFDCMobileLayout.recordType-meta.xml
<RecordType>
    <fullName>SFDCMobileLayout</fullName>
    <active>true</active>
    <label>SFDCMobileLayout</label>
</RecordType>