force-app/main/default/objects/Product2/recordTypes/Smart.recordType-meta.xml
<RecordType>
    <fullName>Smart</fullName>
    <active>true</active>
    <description>スマート向け入力用</description>
    <label>スマート</label>
</RecordType>