force-app/main/default/objects/Product2/listViews/AllProducts_AFM.listView-meta.xml
<ListView>
    <fullName>AllProducts_AFM</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>MainProduct__c</columns>
    <columns>PurchasePrice__c</columns>
    <columns>JapanPurchase__c</columns>
    <columns>EuCustomsRate__c</columns>
    <columns>OverseasFreightCosts__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>AvaliableForDemo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>AFM</value>
    </filters>
    <label>All Products (AFM)</label>
    <language>en_US</language>
</ListView>