force-app/main/default/objects/Product2/listViews/AllProductsSupplier.listView-meta.xml
<ListView>
    <fullName>AllProductsSupplier</fullName>
    <columns>Supplier__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PartNumber__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>MainProduct__c</columns>
    <columns>PurchasePrice__c</columns>
    <columns>JapanPurchase__c</columns>
    <columns>EuCustomsRate__c</columns>
    <columns>OverseasFreightCosts__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>AvaliableForDemo__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products by supplier</label>
    <language>en_US</language>
</ListView>