force-app/main/default/objects/Product2/listViews/Service_Products.listView-meta.xml
<ListView>
    <fullName>Service_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>IsUsedByHTE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>SRV</value>
    </filters>
    <filters>
        <field>IsUsedByHTE__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Service Products HTE</label>
</ListView>